--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-string-interpolation></app-string-interpolation>
+<!--<app-string-interpolation></app-string-interpolation>-->
+<app-property-binding></app-property-binding>
