--- a/src/app/string-interpolation/string-interpolation.component.html
+++ b/src/app/string-interpolation/string-interpolation.component.html
@@ -8,7 +8,7 @@
       <p>First name: {{person.firstname}} </p>
       <p>Last name: {{person.lastname}} </p>
       <p>Age: {{person.age}}</p>
-      <p>Address: {{person.addresss}} </p>
+      <p>Address: {{person.address}} </p>
       <form>
         <mat-form-field class="example-full-width">
           <input matInput placeholder="Name" value="{{person.firstname}}">
