--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<!--<app-string-interpolation></app-string-interpolation>-->
-<app-property-binding></app-property-binding>
+<!--
+    <app-string-interpolation></app-string-interpolation>
+    <app-property-binding></app-property-binding>
+-->
+<app-event-binding></app-event-binding>
